[package]
name = "oxidize-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = "0.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bench]]
name = "engine_benches"
harness = false