[package]
name = "oxidize-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.8"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower_governor = "0.8.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = "0.15"