[package]
name = "oxidize-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower_governor = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
oxidize-engine = { version = "0.1.0", path = "../oxidize-engine" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
