[package]
name = "oxidize-ui"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
oxidize-engine = { path = "../oxidize-engine" }
console_error_panic_hook = "0.1"
gloo-net = "0.5"
gloo-timers = "0.3"
chrono = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Navigator", "Clipboard", "Request", "RequestInit", "Response"] }

[dev-dependencies]
headless_chrome = "1.0"
tokio = { version = "1.0", features = ["full"] }
